# Symbolica

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  structure.md  structure_updated.md  tree_to_md.py
CMake/: CppLint.cmake
assets/gui/low/: inventory.txt  logo.txt  lose.txt  menu.txt  settings.txt  win.txt
config/: GameConfig.json  ItemsPrefabs.json  Symbolica.ini  terminal.ini  tilemap.ini
include/classes/: Controls.h  IReader.h  IWriter.h
include/config/: IniParser.h  SpawnConfig.h  TilemapConfig.h  UISettings.h
include/core/: EntityFabric.h  GameState.h  GameStatistics.h  ItemData.h  LevelGenerator.h  LevelState.h  Map.h
include/ecs/: Context.h  Engine.h  EntityManager.h  IComponent.h  IScene.h  ISystem.h  SceneManager.h  SystemManager.h
include/ecs/components/: AIcontrolsComponent.h  CollectorComponent.h  ColliderComponent.h  ColorComponent.h  DamageComponent.h  EquipmentComponent.h  ExperienceComponent.h  HealthComponent.h  InventoryComponent.h  ItemComponent.h  LevelComponent.h  LocationComponent.h  MovementComponent.h  NameComponent.h  OnPlaceComponent.h  OpenableComponent.h  PathToTargetComponent.h  PlayerControlComponent.h  ProtectionComponent.h  RadiusComponent.h  SightRadiusComponent.h  StateComponent.h  StepComponent.h  StepLimitComponent.h  TextureComponent.h  TransformComponent.h  WorthComponent.h
include/ecs/components/tags/: AbstractTag.h  ArmorTagComponent.h  DoorTagComponent.h  EnemyTagComponent.h  FoodTagComponent.h  GroundTagComponent.h  ItemTagComponent.h  MoneyTagComponent.h  NPCTagComponent.h  ObserverTagComponent.h  ObstacleTagComponent.h  PlayerTagComponent.h  WeaponTagComponent.h
include/ecs/entities/: Entity.h
include/ecs/systems/: AIcontrolsSystem.h  BattleSystem.h  CollisionSystem.h  GameControlSystem.h  GameOverSystem.h  GameWinSystem.h  InventoryControlSystem.h  InventoryRenderingSystem.h  LevelMapUpdateSystem.h  LevelSystem.h  MovementSystem.h  ObstaclesControlSystem.h  PlayerControlSystem.h  RadiusUpdateSystem.h  RenderingSystem.h  RoomsSwitchSystem.h
include/enums/: EntitiesTagsEnum.h  EntityColor.h  EntityParams.h  EntityType.h  GameObjectsEnum.h  GameObjectsTexture.h  GameStateTypesEnum.h  ItemPrefab.h  ItemStats.h  PlayerSaveData.h  SceneType.h  SceneTypesEnum.h  TileColor.h  TileParams.h  TileType.h
include/io/: IWriter.h  LevelReader.h  LevelWriter.h  SavePlayerReader.h  SavePlayerWriter.h  TxtReader.h
include/scenes/: GameOverScene.h  GameScene.h  GameWinScene.h  LoadingScene.h  SettingsScene.h  TitleScene.h
include/utils/ecs/: Filter.h
include/utils/game/: BSPNode.h  DungeonGenerator.h  LevelGenerator.h  LevelReader.h  LevelReaderTxt.h  LevelWriter.h  LevelWriterTxt.h  RoomFiller.h  RoomGenerator.h  SaveConverter.h
include/utils/math/: Grid.h  Node.h  NodeComparator.h  PRNG.h  Vector2D.h  Vector2DComparator.h  Vector2DHash.h  aStar.h
include/utils/serialization/: JsonSerialization.h
levels/: level1.txt  level2.txt  room2.txt
saves/: levelN.txt
src/: main.cpp
src/config/: IniParser.cpp  SpawnConfig.cpp  TilemapConfig.cpp  UISettings.cpp
src/core/: EntityFabric.cpp  GameState.cpp  GameStatistics.cpp  LevelGenerator.cpp  Map.cpp
src/ecs/: Engine.cpp  EntityManager.cpp  IScene.cpp  ISystem.cpp  SceneManager.cpp
src/ecs/components/: ColliderComponent.cpp  ColorComponent.cpp  DamageComponent.cpp  EquipmentComponent.cpp  ExperienceComponent.cpp  HealthComponent.cpp  InventoryComponent.cpp  ItemComponent.cpp  LevelComponent.cpp  LocationComponent.cpp  MovementComponent.cpp  NameComponent.cpp  OnPlaceComponent.cpp  OpenableComponent.cpp  PathToTargetComponent.cpp  PlayerControlComponent.cpp  ProtectionComponent.cpp  RadiusComponent.cpp  StateComponent.cpp  StepComponent.cpp  StepLimitComponent.cpp  TextureComponent.cpp  TransformComponent.cpp  WorthComponent.cpp
src/ecs/components/tags/: AbstractTag.cpp  ArmorTagComponent.cpp  DoorTagComponent.cpp  EnemyTagComponent.cpp  FoodTagComponent.cpp  ItemTagComponent.cpp  MoneyComponent.cpp  ObserverTagComponent.cpp  ObstacleComponent.cpp  PlayerComponent.cpp  WeaponTagComponent.cpp
src/ecs/systems/: AIcontrolsSystem.cpp  BattleSystem.cpp  CollisionSystem.cpp  GameControlSystem.cpp  GameOverSystem.cpp  GameWinSystem.cpp  InventoryControlSystem.cpp  InventoryRenderingSystem.cpp  LevelMapUpdateSystem.cpp  LevelSystem.cpp  MovementSystem.cpp  ObstaclesControlSystem.cpp  PlayerControlSystem.cpp  RadiusUpdateSystem.cpp  RenderingSystem.cpp  RoomsSwitchSystem.cpp
src/input/: Controls.cpp
src/io/: LevelReader.cpp  LevelWriter.cpp  SavePlayerReader.cpp  SavePlayerWriter.cpp  TxtReader.cpp
src/scenes/: GameOverScene.cpp  GameScene.cpp  GameWinScene.cpp  LoadingScene.cpp  SettingsScene.cpp  TitleScene.cpp
src/symbolica/levels/: level11.txt  room0.txt  room1.txt  room3.txt
src/tests/: SavesTests.cpp
src/utils/ecs/: Filter.cpp
src/utils/game/: DungeonGenerator.cpp  LevelGenerator.cpp  LevelReader.cpp  LevelReaderTxt.cpp  LevelWriter.cpp  LevelWriterTxt.cpp  RoomFiller.cpp  SaveConverter.cpp
src/utils/math/: Vector2D.cpp  Vector2DComparator.cpp
src/utils/serialization/: JsonSerialization.cpp
